# Templater

./: .docker_ignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  .versionrc  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INTERNAL_COMMAND_TEMPLATES.md  INTERNAL_TEMPLATES.md  Makefile  README.md  README_zh.md  build.sh  data.json  esbuild.config.mjs  eslint.config.mjs  faq.html  index.html  installation.html  introduction.html  jest.config.ts  main.ts  manifest-beta.json  manifest.json  openclaw-plugin-cli.cjs  openclaw-templater-cli.cjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  print.html  rollup.config.js  searchindex.js  searchindex.json  settings.html  styles.css  (+8 more)
.github/: FUNDING.yml
commands/: dynamic-command.html  execution-command.html  overview.html  whitespace-control.html
docs/: .gitignore  INTERNAL_COMMANDS.md  INTERNAL_TEMPLATES.md  README.md  book.toml  documentation.toml  docusaurus.config.js  package.json  sidebars.js
docs_zh/: book.toml
internal-functions/: contribute.html  overview.html
openclaw-skill/: SKILL.md
scripts/: versions-updater.cjs
src/: AbstractTemplateParser.ts  CommandHandler.ts  Constants.ts  CursorJumper.ts  DateTime.ts  Error.ts  EventHandler.ts  FolderTemplate.ts  FuzzySuggester.ts  Log.ts  Settings.ts  TParser.ts  TemplateParser.ts  Templater.ts  TemplaterEditor.ts  TemplaterFuzzySuggest.ts  Utils.ts  constants.ts  fuzzy_suggester.ts  i18n.ts  internal_command_templates.ts  internal_templates.ts  lib.rs  main.ts  obsidian.d.ts  obsidian_api.rs  settings.ts  (+2 more)
(+328 files in other folders)
