[package]
name = "templater-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.27"
js-sys = "0.3.53"

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[dependencies.web-sys]
version = "0.3.53"
features = ["console", "HtmlElement"]

[dev-dependencies]
wasm-bindgen-test = "0.3.26"
